applications/pymp/pymp_redis_readonly/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pymp-redis-readonly
  name: pymp-redis-readonly
  namespace: pymp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pymp-redis-readonly
  template:
    metadata:
      labels:
        app: pymp-redis-readonly
        redis: readwrite
    spec:
      containers:
      - name: pymp-redis-readonly
        image: redis:latest
        command: ["redis-server", "--slaveof", "pymp-redis", "6379"]
        imagePullPolicy: Always
