applications/pymp/pymp_redis_readonly/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymp-redis-readonly
  namespace: pymp
  labels:
    app: pymp-redis-readonly
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: pymp-redis-readonly
