applications/pymp/pymp_redis_readonly/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pymp-redis-readonly-allow
  namespace: pymp
spec:
  podSelector:
    matchLabels:
      app: pymp-redis-readonly
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          redis: readonly
    ports:
    - protocol: TCP
      port: 6379
